fixed enter search button on mobile and thin devices

--- a/style/results.css
+++ b/style/results.css
@@ -189,7 +189,7 @@ footer {
 	margin-top: 1vh;
 	border-radius: 5px;
 	border: transparent;
-	width: 45vw;
+	width: 30vw;
 	height: 2rem;
 	text-align: center;
 	font-family: 'Golos Text', sans-serif;
